# tenbox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-rootfs.yml  deploy-website.yml  pr-check.yml
etc/: nginx.conf
scripts/: .env.sample  build-macos.sh  build-msi.bat  make-dmg.sh
scripts/arm64/: make-rootfs-chromium.sh  make-rootfs-copaw.sh  make-rootfs-openclaw.sh
scripts/ci/: update_images_json.py  upload_to_oss.py
scripts/x86_64/: make-rootfs-chromium.sh  make-rootfs-copaw.sh  make-rootfs-openclaw.sh
src/core/: CMakeLists.txt
src/core/net/: net_backend.cpp  net_backend.h  net_nat.cpp  net_port_forward.cpp  poll_handle.h
src/core/vmm/: hypervisor_vcpu.h  hypervisor_vm.h  vm.cpp  vm.h
src/ipc/: ipc_transport.h
src/manager/: CMakeLists.txt  i18n.cpp  i18n.h  image_source.cpp  image_source.h  main.cpp  manager_service.cpp  manager_service.h  update_checker.cpp  update_checker.h  vm_forms.cpp  vm_forms.h
src/manager-macos/: Package.swift  TenBoxApp.swift
src/manager-macos/Bridge/: IpcClientWrapper.swift  TenBoxBridgeWrapper.swift
src/manager-macos/Input/: InputHandler.swift  KeyboardCaptureManager.swift
src/manager-macos/Resources/: Info.plist
src/platform/: CMakeLists.txt
src/platform/macos/hypervisor/: hvf_vcpu.cpp
src/platform/macos/ipc/: socket_transport.h
src/platform/windows/hypervisor/: whvp_platform.cpp  whvp_vcpu.cpp  whvp_vcpu.h  whvp_vm.cpp  whvp_vm.h
src/platform/windows/ipc/: pipe_transport.h
src/runtime/: CMakeLists.txt  runtime_service.cpp
website/: package-lock.json
website/public/: CNAME
(+49 files in other folders)
