add_executable(tenbox-vm-runtime
    ${CMAKE_SOURCE_DIR}/src/runtime/main.cpp
    ${CMAKE_SOURCE_DIR}/src/runtime/runtime_service.cpp
    ${CMAKE_SOURCE_DIR}/src/runtime/runtime.rc
    ${CMAKE_SOURCE_DIR}/src/runtime/app.manifest
)

target_include_directories(tenbox-vm-runtime
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_BINARY_DIR}
)

target_link_libraries(tenbox-vm-runtime
    PRIVATE
        tenbox_platform
        tenbox_core
        tenbox_ipc
        ws2_32
)
